# table-schema-syncr

./: Cargo.toml
src/: column.rs  conf.rs  database.rs  error.rs  lib.rs  main.rs  table.rs  util.rs
src/conn/: clickhouse.rs  mod.rs  mysql.rs
src/datastore/: mod.rs
src/db/: mod.rs
src/gui/: content.rs  event_handler.rs  header.rs  mod.rs  modal.rs  sidebar.rs  style.rs  toast.rs
src/mapping/: column.rs  database.rs  mod.rs  table.rs  type_parser_ch.rs  type_parser_hbase.rs  type_parser_mysql.rs
src/store/: conn_conf.rs  mod.rs
