[package]
name = "table-schema-syncr"
version = "0.1.0"
edition = "2021"

[lib]
name = "schema_syncr"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clickhouse = "0.11.1"
mysql = "23.0.1"
regex = "1.7.0"
once_cell = "1.16.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
anyhow = "1.0.68"
tokio = { version = "1.23.0" }
futures = "0.3.25"
uuid = { version = "1.2.2", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1.23.0", features = ["macros"] }
