[package]
name = "schema-syncr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clickhouse = "0.11.1"
mysql = "23.0.1"
regex = "1.7.0"
once_cell = "1.16.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
anyhow = "1.0.68"
tokio = { version = "1.25.0", features = ["rt-multi-thread"] }
futures = "0.3.25"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
directories = "4.0.1"
log = "0.4.17"
tracing = { version = "0.1.37" }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-appender = "0.2.2"
chrono = "0.4.23"
iced = {  git = "https://github.com/itinycheng/iced.git", branch = "master" }
iced_native = { git = "https://github.com/itinycheng/iced.git", branch = "master", package = "iced_native"}
validator = { version = "0.16.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.25.0", features = ["macros"] }
